@@ -70,7 +70,7 @@ abstract class JHtmlRules
 			$html[] = ' 				<td class="col1">'.$group->text.'</td>';
 			foreach ($actions as $i => $action)
 			{
-				$html[] = ' 				<td class="col'.($i+2).'">'.($inherited->allow($action->name, $group->value) ? $images['allow-l'] : $images['deny-l']).'</td>';
+				$html[] = ' 				<td class="col'.($i+2).'">'.($inherited->allow($action->name, $group->identities) ? $images['allow-l'] : $images['deny-l']).'</td>';
 			}
 			$html[] = ' 			</tr>';
 		}
@@ -94,17 +94,19 @@ abstract class JHtmlRules
 
 			foreach ($groups as $i => $group)
 			{
+				$selected = $rules->allow($action->name, $group->value);
+
 				$html[] = ' 			<tr class="row'.($i%2).'">';
 				$html[] = ' 				<td class="col1">'.$group->text.'</td>';
-				$html[] = ' 				<td class="col2">'.($inheriting->allow($action->name, $group->value) ? $images['allow-i'] : $images['deny-i']).'</td>';
+				$html[] = ' 				<td class="col2">'.($inheriting->allow($action->name, $group->identities) ? $images['allow-i'] : $images['deny-i']).'</td>';
 				$html[] = ' 				<td class="col3">';
 				$html[] = ' 					<select id="'.$idPrefix.'_'.$action->name.'_'.$group->value.'" class="inputbox" size="1" name="'.$control.'['.$action->name.']['.$group->value.']">';
-				$html[] = ' 						<option value=""'.($rules->allow($action->name, $group->value) === null ? ' selected="selected"' : '').'>'.JText::_('JINHERIT').'</option>';
-				$html[] = ' 						<option value="1"'.($rules->allow($action->name, $group->value) === true ? ' selected="selected"' : '').'>'.JText::_('JALLOW').'</option>';
-				$html[] = ' 						<option value="0"'.($rules->allow($action->name, $group->value) === false ? ' selected="selected"' : '').'>'.JText::_('JDENY').'</option>';
+				$html[] = ' 						<option value=""'.($selected === null ? ' selected="selected"' : '').'>'.JText::_('JINHERIT').'</option>';
+				$html[] = ' 						<option value="1"'.($selected === true ? ' selected="selected"' : '').'>'.JText::_('JALLOW').'</option>';
+				$html[] = ' 						<option value="0"'.($selected === false ? ' selected="selected"' : '').'>'.JText::_('JDENY').'</option>';
 				$html[] = ' 					</select>';
 				$html[] = ' 				</td>';
-				$html[] = ' 				<td class="col4">'.($inherited->allow($action->name, $group->value) ? $images['allow'] : $images['deny']).'</td>';
+				$html[] = ' 				<td class="col4">'.($inherited->allow($action->name, $group->identities) ? $images['allow'] : $images['deny']).'</td>';
 				$html[] = ' 			</tr>';
 			}
 
@@ -151,6 +153,7 @@ abstract class JHtmlRules
 		// Get the user groups from the database.
 		$db->setQuery(
 			'SELECT a.id AS value, a.title AS text, COUNT(DISTINCT b.id) AS level' .
+			' , GROUP_CONCAT(b.id SEPARATOR \',\') AS parents' .
 			' FROM #__usergroups AS a' .
 			' LEFT JOIN `#__usergroups` AS b ON a.lft > b.lft AND a.rgt < b.rgt' .
 			' GROUP BY a.id' .
@@ -158,10 +161,14 @@ abstract class JHtmlRules
 		);
 		$options = $db->loadObjectList();
 
-		// Pad the option text with spaces using depth level as a multiplier.
-//		foreach ($options as $option) {
-//			$option->text = str_repeat('&nbsp;&nbsp;',$option->level).$option->text;
-//		}
+		// Pre-compute additional values.
+		foreach ($options as &$option)
+		{
+			// Pad the option text with spaces using depth level as a multiplier.
+			//$option->text = str_repeat('&nbsp;&nbsp;',$option->level).$option->text;
+
+			$option->identities = ($option->parents) ? explode(',', $option->parents.','.$option->value) : array($option->value);
+		}
 
 		return $options;
 	}
